--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
   <meta itemprop="name" content="Juhe | Portfolio">
   <meta itemprop="description" content="Portfolio website build with React.js">
   <meta itemprop="image"
-    content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK">
+    content="https://juhee.dataquorums.com/static/media/Juhee-Portfolio.2cd8832e.PNG">
 
   <!-- Facebook Meta Tags -->
   <meta property="og:url" content="https://soumyajit.vercel.app">
@@ -23,14 +23,14 @@
   <meta property="og:title" content="Juhe | Portfolio">
   <meta property="og:description" content="Portfoliol website build with React.js">
   <meta property="og:image"
-    content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK">
+    content="https://juhee.dataquorums.com/static/media/Juhee-Portfolio.2cd8832e.PNG">
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Juhe | Portfolio">
   <meta name="twitter:description" content="Portfolio website build with React.js">
   <meta name="twitter:image"
-    content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK">
+    content="https://juhee.dataquorums.com/static/media/Juhee-Portfolio.2cd8832e.PNG">
 </head>
 
 <body>
