--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     content="https://juhee.dataquorums.com/static/media/Juhee-Portfolio.2cd8832e.PNG">
 
   <!-- Facebook Meta Tags -->
-  <meta property="og:url" content="https://soumyajit.vercel.app">
+  <meta property="og:url" content="http://juhe-hee.medium.com/">
   <meta property="og:type" content="website">
   <meta property="og:title" content="Juhe | Portfolio">
   <meta property="og:description" content="Portfoliol website build with React.js">
